--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 
 /* ESTILO GERAL */
+#your-element-selector {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+}
 
 
 *{
