--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 /* ESTILO GERAL */
 #your-element-selector {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
